fixed alignment of copyright and resume in nav, commented out budget tracker because it's not working

--- a/src/assets/css/style2.css
+++ b/src/assets/css/style2.css
@@ -47,7 +47,7 @@ nav {
 .nav-btn a {
   padding-left: 0.5rem;
   position: relative;
-  top: 2px;
+  top: 1px;
   text-decoration: none;
   font-size: 14.5px;
   text-shadow: 2px 4px 4px black;
@@ -339,14 +339,26 @@ div.info-and-form {
 }
 
 .copyright {
-  text-align: right;
-  font: lighter;
+  /* text-align: right; */
+  display: flex;
+  justify-content: space-between;
+  color: white;
   font-size: 2rem;
 }
 
-div.copyright {
-  padding: auto;
-  font-size: 20px;
+.copyright-icon {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.copyright h4 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-bottom: 1.75rem;
+  padding-left: 0.5rem;
+  color: white;
 }
 
 .flex-wrapper {
@@ -367,23 +379,7 @@ div.copyright {
   }
 }
 
-@media (max-width: 424px) {
-  .submit-btn {
-    /* width: 70%; */
-    float: right;
-  }
-  .textarea {
-    width: 90%;
-  }
-}
-
-@media only screen and (max-width: 768px) {
-  .styled-input {
-    width: 100%;
-  }
-}
-
-@media screen and (max-width: 768px) {
+@media (max-width: 768px) {
   .footer-icons {
     flex-direction: column;
   }
@@ -401,9 +397,12 @@ div.copyright {
   .project-text-card {
     width: 90%;
   }
+  .styled-input {
+    width: 100%;
+  }
 }
 
-@media screen and (max-width: 576px) {
+@media (max-width: 576px) {
   .header {
     font-size: 30px;
     margin-left: 2rem;
@@ -421,6 +420,16 @@ div.copyright {
   }
   .email-link {
     font-size: 20px;
+  }
+}
+
+@media (max-width: 424px) {
+  .submit-btn {
+    /* width: 70%; */
+    float: right;
+  }
+  .textarea {
+    width: 90%;
   }
 }
 
